chore(cycle): rename fox designer|cycle to camunda modeler|cycle
Closes CAM-191

--- a/cycle/src/main/webapp/WEB-INF/views/app/first-time-setup.html
+++ b/cycle/src/main/webapp/WEB-INF/views/app/first-time-setup.html
@@ -10,9 +10,9 @@
         <div data-error-panel></div>
         <div class="row content-container">
           <div class="span4 well">
-            <h1>fox cycle Setup </h1>
+            <h1>camunda cycle Setup </h1>
             <p class="offset-paragraph">
-              This seems to be a new fox cycle installation. Before you can use fox cycle, you have to perform the initial setup.  
+              This seems to be a new camunda cycle installation. Before you can use camunda cycle, you have to perform the initial setup.  
             </p>
             <p class="offset-paragraph">
               If you have trouble setting up cycle, please contact camunda support.
