--- a/cycle/src/main/webapp/WEB-INF/views/fragment/common.html
+++ b/cycle/src/main/webapp/WEB-INF/views/fragment/common.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head th:fragment="head">
-    <title>fox cycle</title>
+    <title>camunda cycle</title>
     
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,7 +29,7 @@
   <body>
     <!-- logo -->
     <a th:fragment="logo" class="brand ir" th:href="@{/app/secured/view/index}">
-      fox cycle
+      camunda cycle
     </a>
     
     <!-- default navigation -->
@@ -99,7 +99,7 @@
     <!-- footer -->
     <footer class="content-container" th:fragment="footer">
       <div class="container-fluid">
-        <p><a th:href="@{/app/secured/view/index}">camunda fox cycle</a> / version ${project.version}</p>
+        <p><a th:href="@{/app/secured/view/index}">camunda cycle</a> / version ${project.version}</p>
       </div>
 
       <script th:src="@{/assets/js/lib/jquery-1.7.2.min.js}"></script>      
