--- a/cycle/src/main/webapp/WEB-INF/views/fragment/common.html
+++ b/cycle/src/main/webapp/WEB-INF/views/fragment/common.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head th:fragment="head">
-    <title>camunda cycle</title>
+    <title>camunda Cycle</title>
     
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
