fix(webapps): update styles to match camundaBPM colors

--- a/cycle/src/main/webapp/WEB-INF/views/fragment/common.html
+++ b/cycle/src/main/webapp/WEB-INF/views/fragment/common.html
@@ -11,7 +11,7 @@
     <meta name="author" content="camunda services GmbH" />
     
     <!-- Styles -->
-    <link th:href="@{/assets/css/bootstrap.css}" rel="stylesheet" />
+    <link th:href="@{/assets/css/bootstrap.min.css}" rel="stylesheet" />
     <link th:href="@{/assets/css/bootstrap-combobox.css}" rel="stylesheet" />
     <link th:href="@{/assets/css/app.css}" rel="stylesheet" />
     <link th:href="@{/assets/css/tree.css}" rel="stylesheet" />
