fix(cycle/CreateDiagramView): Fix broken css
related to CAM-1146

--- a/cycle/src/main/webapp/WEB-INF/views/app/partials/bpmn-diagram.html
+++ b/cycle/src/main/webapp/WEB-INF/views/app/partials/bpmn-diagram.html
@@ -77,7 +77,7 @@
         <h3 data-ng-show="editDialogMode == 'ADD_DIAGRAM'" th:text="#{Add Process Model}"></h3>
         <h3 data-ng-show="editDialogMode == 'CREATE_NEW_DIAGRAM'" th:text="#{Create Process Model}"></h3>
       </div>
-      <div class="modal-body">
+      <div class="modal-body edit-diagram-modal">
         <div data-error-panel></div>
         <form class="form-horizontal" novalidate ng-submit="save()" name="addModelForm">
           <fieldset>
