fix(cycle/help): Fix help tooltip
related to CAM-1146, CAM-1137

--- a/cycle/src/main/webapp/assets/css/app.css
+++ b/cycle/src/main/webapp/assets/css/app.css
@@ -410,6 +410,11 @@ div#myCarousel .carousel-control.left {
   left: 12%;
 }
 
+.popover {
+  /* placement above modal dialog */
+  z-index: 1060;
+}
+
 /** popover styles */
 .popover-inner {
   padding: 0px;
