--- a/cycle/src/main/webapp/WEB-INF/views/fragment/common.html
+++ b/cycle/src/main/webapp/WEB-INF/views/fragment/common.html
@@ -107,11 +107,17 @@
       <script th:src="@{/assets/js/lib/bootstrap/bootstrap-combobox.js}"></script>
       <script th:src="@{/assets/js/lib/angular/angular.js}"></script>
       <script th:src="@{/assets/js/lib/angular/angular-resource.js}"></script>
-      <script th:src="@{/assets/js/lib/dojo/dojo/dojo.js}"></script>
 
       <!--
       <script th:src="@{'assets/js/lib/angular/i18n/angular-locale-' + ${locale} + '.js'}"></script>
       -->
+      <script th:src="@{/assets/js/lib/lodash.min.js}"></script>
+      <script th:src="@{/assets/js/lib/sax.js}"></script>
+      <script th:src="@{/assets/js/lib/snap.svg-min.js}"></script>
+      <script th:src="@{/assets/js/lib/bpmn-viewer.min.js}"></script>
+
+      <script th:src="@{/assets/js/lib/dojo/dojo/dojo.js}"></script>
+      
 
       <script th:src="@{/assets/js/app/extensions.js}"></script>
       <script th:src="@{/assets/js/app/directives.js}"></script>
