--- a/cycle/src/main/webapp/WEB-INF/views/app/partials/bpmn-diagram.html
+++ b/cycle/src/main/webapp/WEB-INF/views/app/partials/bpmn-diagram.html
@@ -28,7 +28,7 @@
     </div>
     
     <div class="info">
-      <span class="filename" ng-hide="imageStatus != 'LOADED' && modelStatus != 'UNAVAILABLE'">{{diagram.label}}</span>
+      <span class="filename" ng-hide="imageStatus != 'LOADED' && imageStatus != 'BPMNIO' && modelStatus != 'UNAVAILABLE'">{{diagram.label}}</span>
       <div class="pull-right" ng-switch on="modelStatus">
         <div ng-switch-when="UNAVAILABLE" class="status label label-important">
           <span th:text="#{'Not available'}">Not available</span>
