chore(renderer): store if modeler image should be used
related to CAM-3149

--- a/cycle/src/main/webapp/WEB-INF/views/app/connectors.html
+++ b/cycle/src/main/webapp/WEB-INF/views/app/connectors.html
@@ -133,13 +133,13 @@
                       </div>
                       
                       <div class="control-group">
-                        <label class="control-label" for="useBpmnIo" 
-                               th:text="#{'Use bpmn.io'}"
+                        <label class="control-label" for="useImage" 
+                               th:text="#{'Use Modeler Image'}"
                                data-help
-                               data-help-text-var="bpmnioText"
-                               data-help-title-var="bpmnioTitle">Use bpmn.io</label>
+                               data-help-text-var="useImageText"
+                               data-help-title-var="useImageTitle">Use Modeler Image</label>
                         <div class="controls">
-                          <input id="bpmnio" name="bpmnio" type="checkbox" ng-model="editConnectorConfiguration.bpmnio"/>
+                          <input id="useImage" name="useImage" type="checkbox" ng-model="editConnectorConfiguration.useImage"/>
                         </div>
                       </div>
                       
