fix(modal): display zoomed diagram with correct size in IE
related to CAM-3238

--- a/cycle/src/main/webapp/assets/css/app.css
+++ b/cycle/src/main/webapp/assets/css/app.css
@@ -327,7 +327,7 @@ li.actions .btn:last-child {
 
 .carousel-inner>.active .diagram-container {
   position: initial;
-  cursor: initial;
+  cursor: default;
 }
 
 .bjs-powered-by {
